--- a/Harshni/aboutus.css
+++ b/Harshni/aboutus.css
@@ -1,26 +1,16 @@
-/* body{
-    background-image: url("Images/1.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 800px;
-    
-} */
-body img{
-    opacity: 0.5;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-.aboutUs{
-    color: black;
+.aboutUs {
     position: relative;
     text-align: center;
-}
-p{
+    color: black;
+  }
+
+.text {
     position: absolute;
-}
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  img{
+      opacity: 0.2;
+  }
